# code-structure

./: CMakeLists.txt  sdkconfig
code-examples/: express-intent.bad.c  express-intent.best.c  express-intent.better.c
code-examples/express_intent/: express-intent-ex1.c  express-intent.example.c
code-examples/keep_scope_small/: avoid_nesting.ex1.c  keep_scope_small_example.c  keep_variable_lifetime_short.ex2.c
code-examples/structure-composition/: structure-composition-bad.c  structure-composition-best.c  structure-composition-better.c  structure-composition-ex1.c
code-examples/variable_names/: variable_names-bad.c  variable_names-best.c  variable_names-better.c  variable_names-ex1.c
main/: CMakeLists.txt  app_config.c  app_config.h  main.c  measure_air_temperature.h  measure_ar_temperature.c  measure_water_temperature.c  measure_water_temperature.h
main/chip_time/: chip_time.c  chip_time.h
main/governor/: alerts.c  alerts.h  governor.c  governor.h
main/measure/: read_DS18B20.h  water_temperature.c
main/measure/air/: air_temperature.c
main/measure/water/: water_temperature.c  water_temperature.h
main/sd_card/: sd_card.c  sd_card.h
main/set_chip_time/: set_chip_time.c
main/temperature/: read_DS18B20.c  temperature.c  temperature.h
main/temperature/water_control/: water_control.c  water_control.h
main/temperature/water_control/cooler/: cooler.c  cooler.h
main/temperature/water_control/heater/: heater.c  heater.h
main/water_level/: water_level.c  water_level.h
main/wifi/: set_chip_time.c  set_chip_time.h  wifi.c  wifi.h
(+6 files in other folders)
